--- a/problemSets/PS/PS8/PS8_corrections.Rnw
+++ b/problemSets/PS/PS8/PS8_corrections.Rnw
@@ -42,7 +42,7 @@
 \noindent \textsc{University of Geneva}     \hfill \textsc{Bachelor in Economics and Management} \\
 \textbf{Probability 1}                      \hfill \textsc{Bachelor in International Relations} \\
 Dr. Daniel \textsc{Flores Agreda}                 \hfill Spring 2021  \\
-ASSIGNMENT 08                               \hfill   April 23th-27th
+ASSIGNMENT 08
 
 
 
