--- a/problemSets/PS/PS9/PS9.Rnw
+++ b/problemSets/PS/PS9/PS9.Rnw
@@ -42,7 +42,7 @@
 \noindent \textsc{University of Geneva}     \hfill \textsc{Bachelor in Economics and Management} \\
 \textbf{Probability 1}                      \hfill \textsc{Bachelor in International Relations} \\
 Dr. Daniel \textsc{Flores Agreda}                 \hfill Spring 2021  \\
-ASSIGNMENT 09                               \hfill   May 3rd \& May 8th
+ASSIGNMENT 09
 
 
 
